# mcp_server_filesystem

./: .gitattributes  .gitignore  .importlinter  .large-files-allowlist  .mcp.json  CONTRIBUTING.md  MCP_CODER_SETUP.md  README.md  claude.bat  claude_local.bat  claude_local.sh  icoder.bat  icoder_local.bat  pyproject.toml  requirements.txt  tach.toml  vulture_whitelist.py
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: commit-pusher.md
.claude/commands/: check_branch_status.md  commit_push.md  discuss.md  implementation_approve.md  implementation_finalise.md  implementation_needs_rework.md  implementation_new_tasks.md  implementation_review.md  implementation_review_supervised.md  implementation_review_supervisor.md  issue_analyse.md  issue_approve.md  issue_create.md  issue_update.md  plan_approve.md  plan_review.md  plan_review_supervisor.md  plan_update.md  rebase.md
.claude/knowledge_base/: planning_principles.md  principles.md  python.md  refactoring_principles.md  software_engineering_principles.md
.claude/skills/check_branch_status/: SKILL.md
.claude/skills/commit_push/: SKILL.md
.claude/skills/discuss/: SKILL.md
.claude/skills/implement_direct/: SKILL.md
.codex-plugin/: plugin.json
.github/workflows/: approve-command.yml  ci.yml  codex-plugin-scanner.yml  label-new-issues.yml  notify-downstream.yml  publish.yml  python-quality-checks.yml  release.yml  upstream-mypy-check.yml
PR_Info/: step_1.md  step_2.md  step_3.md  step_4.md  step_5.md  step_6.md  summary.md
docs/: ARCHITECTURE.md
docs/processes-prompts/: refactoring-guide.md
integrate_in_cline/: QUICK_START.md  README.md  sample_config.json
pr_info/: DEVELOPMENT_PROCESS.md  TASK_TRACKER.md  _commit_message_filesize_fix.txt  _commit_message_step1.txt  _commit_message_step2.txt  _commit_message_step3.txt  _commit_message_step4.txt  commit_message.txt  commit_message_step_1.md  commit_message_step_2.md  commit_message_step_3.md  implementation_review_log_1.md  implementation_review_log_2.md  implementation_review_log_3.md  plan_review_log_1.md  plan_review_log_2.md
pr_info/steps/: Decisions.md  step_1.md  step_2.md  step_3.md  step_4.md  step_5.md  step_6.md  step_7.md  step_8.md  summary.md
src/: file_tools.py  log_utils.py  main.py  server.py
src/file_tools/: __init__.py  directory_utils.py  edit_file.py  file_operations.py  gitignore_parser.py  path_utils.py
src/mcp_server_filesystem/: __init__.py  log_utils.py  main.py  server.py  version.py
src/mcp_workspace/: __init__.py  __main__.py  _ssl.py  config.py  constants.py  main.py  reference_projects.py  server.py  server_reference_tools.py
tests/: LLM_Test.md  conftest.py  integration_test_move.py  manual_test_move_file.py  test_config.py  test_constants.py  test_directory_utils.py  test_file_operations.py  test_file_tools.py  test_log_utils.py  test_path_utils.py  test_read_github_deps.py  test_reference_projects.py  test_reference_projects_git.py  test_reference_projects_mcp_tools.py  test_reference_projects_utils.py  test_server.py  test_ssl.py  test_version.py
tests/checks/: test_branch_status.py  test_branch_status_ci.py  test_branch_status_polling.py  test_branch_status_pr_feedback.py  test_branch_status_pr_fields.py  test_branch_status_recommendations.py  test_file_sizes.py
tests/file_tools/: test_directory_utils.py  test_directory_utils_extended.py  test_edit_already_applied_fix.py  test_edit_file.py  test_edit_file_api.py  test_edit_file_backslash.py  test_edit_file_issues.py  test_file_operations.py  test_git_operations.py  test_gitignore_basic.py  test_gitignore_edge_cases.py  test_gitignore_folders.py  test_gitignore_parser.py  test_init.py  test_markdown_indentation.py  test_move_git_integration.py  test_move_operations.py  test_path_utils.py  test_search.py  test_tree_listing.py
tests/git_operations/: test_arg_validation.py  test_base_branch.py  test_branch_queries.py  test_branches.py  test_check_ignore.py  test_commits.py  test_compact_diffs.py  test_compact_diffs_header_only.py  test_compact_diffs_integration.py  test_diffs.py  test_edge_cases.py  test_file_tracking.py  test_init_exports.py  test_output_filtering.py  test_parent_branch_detection.py  test_read_operations.py  test_remotes.py  test_repository_status.py  test_staging.py
tests/github_operations/: __init__.py  conftest.py  test_base_manager.py  test_branch_naming.py  test_ci_log_parser.py  test_ci_results_manager_aggregation.py  test_ci_results_manager_artifacts.py  test_ci_results_manager_foundation.py  test_ci_results_manager_logs.py  test_ci_results_manager_status.py  test_diagnostics.py  test_exception_renderer.py  test_formatters.py  test_github_integration_smoke.py  test_github_read_tools.py  test_github_utils.py  test_issue_branch_manager.py  test_issue_branch_manager_integration.py  test_issue_cache.py  test_issue_manager_comments.py  test_issue_manager_core.py  test_issue_manager_events.py  test_issue_manager_integration.py  test_issue_manager_labels.py  test_labels_manager.py  test_pr_manager.py  test_pr_manager_closing_issues.py  test_pr_manager_feedback.py  test_pr_manager_find_by_head.py  test_repo_identifier.py  test_verification.py
tests/testdata/: indent_testing_data.txt  markdown_testing_data.md
tests/utils/: test_repo_identifier.py  test_timezone_utils.py  test_token_fingerprint.py
tests/workflows/: test_task_tracker.py
tools/: __init__.py  check_no_url_deps.py  check_version.bat  checks2clipboard.bat  commit_summary.bat  format_all.bat  format_all.sh  get_pytest_performance_stats.bat  lint_imports.bat  lint_imports.sh  mypy.bat  pr_review.bat  pr_summary.bat  pycycle_check.bat  pycycle_check.sh  pydeps_graph.bat  pydeps_graph.sh  pylint_check.bat  pytest_check.bat  read_github_deps.py  reinstall.bat  reinstall.sh  reinstall_local.bat  run_all_checks.bat  run_all_checks.sh  tach_check.bat  tach_check.sh  tach_docs.bat  tach_docs.py  tach_docs.sh  test_profiler.bat  test_profiler_generate_only.bat  vulture_check.bat  vulture_check.sh
tools/test_profiler_plugin/: __init__.py  generate_report.py
(+110 files in other folders)
