[project]
name = "mcp-server-filesystem"
version = "0.1.0"
authors = [
    {name = "Marcus Jellinghaus"},
]
description = "A simple Model Context Protocol (MCP) server with file operation tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "server", "filesystem", "claude", "ai", "assistant", "file-operations"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pathspec>=0.12.1",
    "igittigitt>=2.1.5",
    "mcp>=1.3.0",
    "mcp[server]>=1.3.0",
    "mcp[cli]>=1.3.0",
    "structlog>=25.2.0",
    "python-json-logger>=3.3.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mcp-code-checker @ git+https://github.com/MarcusJellinghaus/mcp-code-checker.git",
]
config = [
    "mcp-config @ git+https://github.com/MarcusJellinghaus/mcp-config.git",
]

[project.scripts]
mcp-server-filesystem = "mcp_server_filesystem.main:main"

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
