[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-filesystem"
dynamic = ["version"]
authors = [
    {name = "Marcus Jellinghaus"},
]
description = "A simple Model Context Protocol (MCP) server with file operation tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "server", "filesystem", "claude", "ai", "assistant", "file-operations"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pathspec>=0.12.1",
    "igittigitt>=2.1.5",
    "mcp>=1.3.0",
    "mcp[server]>=1.3.0",
    "mcp[cli]>=1.3.0",
    "structlog>=25.2.0",
    "python-json-logger>=3.3.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "mcp-code-checker @ git+https://github.com/MarcusJellinghaus/mcp-code-checker.git",
]
architecture = [
    "import-linter>=2.0",
    "tach>=0.6.0",
    "pycycle>=0.0.8",
    "vulture>=2.14",
]
config = [
    "mcp-config @ git+https://github.com/MarcusJellinghaus/mcp-config.git",
]

[project.scripts]
mcp-server-filesystem = "mcp_server_filesystem.main:main"

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp_server_filesystem#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools_scm]
# Version is automatically determined from git tags
# Tag format: v0.1.0 -> version 0.1.0
# Between releases: 0.1.0.devN+gHASH (includes commit count and hash)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
addopts = ["--strict-markers", "--tb=short", "-n", "auto", "-p", "no:tach"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[tool.pylint.messages_control]
# W, C, R categories disabled - only errors (E) and fatals (F) are checked
# Previously disabled individually (now covered by W category above):
# W1203: Disable lazy % formatting - project prefers f-strings for readability
# W0621: Disable redefined-outer-name - pytest fixtures standard pattern
# R0401: Enable cyclic-import detection (not enabled by default as it's in refactor category)
disable = ["W", "C", "R"]
enable = ["R0401"]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Disable unreachable warnings for test files due to mypy false positives with assertions
# Disable union-attr for test files where mocked attributes are intentionally set
disable_error_code = ["unreachable", "union-attr"]
ignore_missing_imports = true
